# bpda-project

./: .gitignore  README.md  docker-compose.yml
backend-sc/: Cargo.toml
backend-sc/interactor/: Cargo.toml
backend-sc/meta/: Cargo.toml
backend-sc/output/: backend-sc.abi.json  backend-sc.mxsc.json  backend-sc.wasm  proxy.rs
backend-sc/scenarios/: backend_sc.scen.json
backend-sc/src/: backend_sc.rs  election.rs  types.rs  voter.rs
backend-sc/tests/: backend_sc_scenario_go_test.rs  backend_sc_scenario_rs_test.rs
backend-sc/wasm/: Cargo.toml
backend-sim/: Dockerfile  Pipfile  README.md  main.py  mock.md
backendsc/: Cargo.toml
backendsc/interactor/: Cargo.toml  state.toml
backendsc/meta/: Cargo.toml
backendsc/output/: backendsc.abi.json  backendsc.imports.json  backendsc.mxsc.json  backendsc.wasm
backendsc/scenarios/: backendsc.scen.json
backendsc/src/: lib.rs  types.rs
backendsc/tests/: backendsc_scenario_go_test.rs  backendsc_scenario_rs_test.rs
backendsc/wasm/: Cargo.toml
dapp/: Dockerfile  index.html  package.json
test/: Cargo.toml  sc-config.toml
test/interact/: Cargo.toml
test/interact/src/: basic_interact.rs  basic_interact_cli.rs  basic_interact_config.rs
test/interactor/: Cargo.toml
test/meta/: Cargo.toml
test/output/: test.abi.json  test.imports.json  test.mxsc.json  test.wasm
test/scenarios/: interactor_trace.scen.json  test.scen.json
test/src/: test.rs  test_proxy.rs
test/tests/: test_blackbox_test.rs  test_scenario_go_test.rs  test_scenario_rs_test.rs  test_unit_test.rs  test_whitebox_test.rs
(+55 files in other folders)
