[[bin]]
name = "basic-interact"
path = "src/basic_interact_main.rs"

[package]
name = "basic-interact"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/basic_interact.rs"

[dependencies]
toml = "0.8.6"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.24"

[dependencies.test]
path = ".."

[dependencies.multiversx-sc-snippets]
version = "0.54.0"

[features]
chain-simulator-tests = []
